IDEMPIERE-3798:Move iDempiere default branch to openjdk 10 (warning deprecated of constructer)
constructer with expression