@@ -290,7 +290,7 @@ public class SendMailText extends SvrProcess
 		}
 		StringBuilder msglog = new StringBuilder((OK ? "@OK@" : "@ERROR@")).append(" - ").append(to.getEMail());
 		addLog(0, null, null, msglog.toString());
-		return new Boolean(OK);
+		return Boolean.valueOf(OK);
 	}	//	sendIndividualMail
 
 }	//	SendMailText
