@@ -320,7 +320,7 @@ public class WTreeBOM extends TreeBOM implements IFormController, EventListener<
 		treeInfo.setText (Msg.getElement(Env.getCtx(), "Sel_Product_ID")+": "+product.getValue());
 
 		Vector<Object> line = new Vector<Object>(10);
-		line.add( new Boolean(product.isActive()));   //  0 IsActive
+		line.add( Boolean.valueOf(product.isActive()));   //  0 IsActive
 		line.add( new Integer(0).toString()); // 1 Line
 		KeyNamePair pp = new KeyNamePair(product.getM_Product_ID(),product.getValue().concat("_").concat(product.getName()));
 		line.add(pp); //  2 M_Product_ID
@@ -442,7 +442,7 @@ public class WTreeBOM extends TreeBOM implements IFormController, EventListener<
 		MProduct M_Product = MProduct.get(getCtx(), bomline.getM_ProductBOM_ID());
 
 		Vector<Object> line = new Vector<Object>(10);
-		line.add( new Boolean(bomline.isActive()));   //  0 IsActive
+		line.add( Boolean.valueOf(bomline.isActive()));   //  0 IsActive
 		line.add( new Integer(bomline.getLine()).toString()); // 1 Line
 		KeyNamePair pp = new KeyNamePair(M_Product.getM_Product_ID(),M_Product.getValue().concat("_").concat(M_Product.getName()));
 		line.add(pp); //  2 M_Product_ID
@@ -471,7 +471,7 @@ public class WTreeBOM extends TreeBOM implements IFormController, EventListener<
 		MProduct M_Product = MProduct.get(getCtx(), bom.getM_Product_ID());
 
 		Vector<Object> line = new Vector<Object>(10);
-		line.add( new Boolean(M_Product.isActive()));   //  0 IsActive
+		line.add( Boolean.valueOf(M_Product.isActive()));   //  0 IsActive
 		line.add( new Integer(bom.getLine()).toString()); // 1 Line
 		KeyNamePair pp = new KeyNamePair(M_Product.getM_Product_ID(),M_Product.getValue().concat("_").concat(M_Product.getName()));
 		line.add(pp); //  2 M_Product_ID
